--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock title %}</title>
   <link rel="stylesheet" href="{% static "css/main.css" %}">
+  {% block head %}{% endblock head %}
 </head>
 <body class="flex flex-col min-h-screen">
   {% include "header.html" %}
