--- a/devshub_project/users/templates/registration/login.html
+++ b/devshub_project/users/templates/registration/login.html
@@ -3,10 +3,33 @@
 {% block title %}Авторизация{% endblock title %}
 
 {% block content %}
-  <h1>Вход</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Войти</button>
-  </form>
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
+
+      <div class="mb-8">
+        {% include "includes/title.html" with text="Авторизация" only %}
+      </div>
+      <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
+        <form method="post">
+          {% csrf_token %}
+          {{ form }}
+          <div class="font-medium mb-2 flex justify-between gap-4">
+            <a href="{% url "register" %}" class="inline-block group">
+              Нет аккаунта? <span class="text-blue-600 group-hover:text-blue-700 transition-colors">Регистрация</span>
+            </a>
+            <a href="{% url "password_reset" %}" class="inline-block group">
+              Забыли пароль? <span class="text-blue-600 group-hover:text-blue-700 transition-colors">Восстановить</span>
+            </a>
+          </div>
+          <div>
+            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+                Войти
+            </button>
+          </div>
+        </form>
+      </div>
+
+
+    </div>
+  </div>
 {% endblock content %}
