--- a/devshub_project/users/templates/registration/register.html
+++ b/devshub_project/users/templates/registration/register.html
@@ -3,10 +3,89 @@
 {% block title %}Регистрация{% endblock title %}
 
 {% block content %}
-  <h1>Регистрация</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Зарегистрироваться</button>
-  </form>
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
+
+      <div class="mb-8">
+        {% include "includes/title.html" with text="Регистрация" only %}
+      </div>
+
+      <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
+        <form method="post">
+
+          {% csrf_token %}
+          {% if form.non_field_errors %}
+            <ul class="errorlist">
+              {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+
+          <!-- Username -->
+          <div class="mb-2">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+            <span class="inline-block w-full text-sm text-gray-500 mt-2">
+              {{ form.username.help_text }}
+            </span>
+            {% if form.username.errors %}
+              <ul class="errorlist">
+                {% for error in form.username.errors %}
+                  <li>{{ error }}</li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+          </div>
+
+          <!-- Password1 -->
+          <div class="mb-2">
+            {{ form.password1.label_tag }}
+            {{ form.password1 }}
+            <span class="inline-block w-full text-sm text-gray-500 mt-2">
+              {{ form.password1.help_text }}
+            </span>
+            {% if form.password1.errors %}
+              <ul class="errorlist">
+                {% for error in form.password1.errors %}
+                  <li>{{ error }}</li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+          </div>
+
+          <!-- Password2 -->
+          <div class="mb-2">
+            {{ form.password2.label_tag }}
+            {{ form.password2 }}
+            <span class="inline-block w-full text-sm text-gray-500 mt-2">
+              {{ form.password2.help_text }}
+            </span>
+            {% if form.password2.errors %}
+              <ul class="errorlist">
+                {% for error in form.password2.errors %}
+                  <li>{{ error }}</li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+          </div>
+
+
+          <div class="text-center text-lg font-medium mb-2">
+            <a href="{% url "login" %}" class="group">
+              Уже есть аккаунт? <span class="text-blue-600 group-hover:text-blue-700 transition-colors">Войти</span>
+            </a>
+          </div>
+
+          <div>
+            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+              Зарегистрироваться
+            </button>
+          </div>
+
+        </form>
+      </div>
+
+    </div>
+  </div>
 {% endblock content %}
